docs: update swagger order
