# docs/swagger/swagger.yaml
@@ -74,8 +74,29 @@ definitions:
         type: integer
       name:
         type: string
+      order:
+        items:
+          $ref: '#/definitions/models.Order'
+        type: array
       phone:
         type: string
+      updatedAt:
+        type: string
+    type: object
+  models.Order:
+    properties:
+      createdAt:
+        type: string
+      customerID:
+        type: integer
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      status:
+        type: string
+      totalPrice:
+        type: integer
       updatedAt:
         type: string
     type: object
@@ -120,6 +141,28 @@ definitions:
         type: integer
       search:
         type: string
+    type: object
+  request.GetAllOrderRequest:
+    properties:
+      limit:
+        description: This is limit, if load all data set value to -1
+        example: 10
+        type: integer
+      page:
+        description: This is page, if load all data set value to 0
+        example: 1
+        type: integer
+      search:
+        type: string
+    type: object
+  request.OrderRequest:
+    properties:
+      customer_id:
+        type: integer
+      status:
+        type: string
+      total_price:
+        type: integer
     type: object
 host: franchise-ordering-system.swagger.io
 info:
@@ -307,4 +350,131 @@ paths:
       summary: Get All Food With Pagination
       tags:
       - Food
+  /orders:
+    get:
+      consumes:
+      - application/json
+      description: Show List All Order
+      parameters:
+      - description: 'Page: page number; Limit: limit number; Search: search order'
+        in: body
+        name: orderRequest
+        schema:
+          $ref: '#/definitions/request.GetAllOrderRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/APIResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.Order'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/HttpErrorBadRequestValidation'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/HttpErrorUnauthorized'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/HttpErrorNotFound'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/HttpErrorInternalServerError'
+      security:
+      - ApiKeyAuth: []
+      summary: Get All Order
+      tags:
+      - Orders
+  /orders/create:
+    post:
+      consumes:
+      - application/json
+      description: Create New Order
+      parameters:
+      - description: 'CustomerID: ID from seleted customer; Status: status order;
+          TotalPrice: total price order'
+        in: body
+        name: orderRequest
+        required: true
+        schema:
+          $ref: '#/definitions/request.OrderRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/APIResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/HttpErrorBadRequestValidation'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/HttpErrorUnauthorized'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/HttpErrorNotFound'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/HttpErrorInternalServerError'
+      security:
+      - ApiKeyAuth: []
+      summary: Create Order
+      tags:
+      - Orders
+  /orders/update:
+    put:
+      consumes:
+      - application/json
+      description: Update Existing Order
+      parameters:
+      - description: 'CustomerID: ID from seleted customer; Status: status order;
+          TotalPrice: total price order'
+        in: body
+        name: orderRequest
+        schema:
+          $ref: '#/definitions/request.OrderRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/APIResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/HttpErrorBadRequestValidation'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/HttpErrorUnauthorized'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/HttpErrorNotFound'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/HttpErrorInternalServerError'
+      security:
+      - ApiKeyAuth: []
+      summary: Update Order
+      tags:
+      - Orders
 swagger: "2.0"
