# pkg/order/delivery/http/order_controller.go
@@ -20,6 +20,20 @@ func NewController(orderUseCase usecase.OrderUseCase) *Controller {
 	return &Controller{orderUseCase: orderUseCase}
 }
 
+// GetAllOrder godoc
+// @Tags         Orders
+// @Summary      Get All Order
+// @Description  Show List All Order
+// @Accept       json
+// @Param        orderRequest  body  request.GetAllOrderRequest  false  "Page: page number; Limit: limit number; Search: search order"
+// @Produce      json
+// @Success      200  {object}  response.APIResponse{data=[]models.Order}
+// @Failure      400  {object}  response.SwaggerHTTPErrorBadRequestValidation
+// @Failure      401  {object}  response.SwaggerHTTPErrorUnauthorized
+// @Failure      404  {object}  response.SwaggerHTTPErrorNotFound
+// @Failure      500  {object}  response.SwaggerHTTPErrorInternalServerError
+// @Security     ApiKeyAuth
+// @Router       /orders [get]
 func (c Controller) GetAll(ctx echo.Context) error {
 	var orderRequest request.GetAllOrderRequest
 	if err := c.BindAndValidate(ctx, &orderRequest); err != nil {
@@ -45,6 +59,20 @@ func (c Controller) GetAll(ctx echo.Context) error {
 	})
 }
 
+// CreateOrder godoc
+// @Tags         Orders
+// @Summary      Create Order
+// @Description  Create New Order
+// @Accept       json
+// @Param        orderRequest  body  request.OrderRequest  true  "CustomerID: ID from seleted customer; Status: status order; TotalPrice: total price order"
+// @Produce      json
+// @Success      200  {object}  response.APIResponse{}
+// @Failure      400  {object}  response.SwaggerHTTPErrorBadRequestValidation
+// @Failure      401  {object}  response.SwaggerHTTPErrorUnauthorized
+// @Failure      404  {object}  response.SwaggerHTTPErrorNotFound
+// @Failure      500  {object}  response.SwaggerHTTPErrorInternalServerError
+// @Security     ApiKeyAuth
+// @Router       /orders/create [post]
 func (c Controller) Create(ctx echo.Context) error {
 	var orderRequest request.OrderRequest
 	if err := c.BindAndValidate(ctx, &orderRequest); err != nil {
@@ -63,6 +91,20 @@ func (c Controller) Create(ctx echo.Context) error {
 	})
 }
 
+// UpdateOrder godoc
+// @Tags         Orders
+// @Summary      Update Order
+// @Description  Update Existing Order
+// @Accept       json
+// @Param        orderRequest  body  request.OrderRequest  false  "CustomerID: ID from seleted customer; Status: status order; TotalPrice: total price order"
+// @Produce      json
+// @Success      200  {object}  response.APIResponse{}
+// @Failure      400  {object}  response.SwaggerHTTPErrorBadRequestValidation
+// @Failure      401  {object}  response.SwaggerHTTPErrorUnauthorized
+// @Failure      404  {object}  response.SwaggerHTTPErrorNotFound
+// @Failure      500  {object}  response.SwaggerHTTPErrorInternalServerError
+// @Security     ApiKeyAuth
+// @Router       /orders/update [put]
 func (c Controller) Update(ctx echo.Context) error {
 	var orderRequest request.OrderRequest
 	if err := c.BindAndValidate(ctx, &orderRequest); err != nil {
